fix conference description display on index
fixes CNVS-8740

test plan:
  * create a conference with a long description;
  * verify that it properly truncates with an ellipsis;
  * shrink the browser window horizontally and verify that
    the conference title and description don't overlap.

Reviewed-on: https://gerrit.instructure.com/25526
Tested-by: Jenkins <jenkins@instructure.com>
QA-Review: Matt Fairbourn <mfairbourn@instructure.com>
Product-Review: Zach Pendleton <zachp@instructure.com>

--- a/app/stylesheets/conferences.scss
+++ b/app/stylesheets/conferences.scss
@@ -12,6 +12,10 @@
 }
 
 /* Page styles */
+body.conferences {
+  min-width: 960px;
+}
+
 #main {
   background: #e8ecef;
 }
@@ -48,27 +52,31 @@ header {
 
 }
 
-.ig-details{
+.ig-details {
   right: 170px
 }
 
-.ig-title{
+.ig-title {
   right: auto;
   max-width: 200px;
 }
 
-.ig-header-title a{
+.ig-header-title a {
   color: #434343;
 }
 
-.ig-list .ig-row .ellipses{
+.ig-list .ig-row .ellipses {
   color: #737373;
 }
 
 #add_conference_form {
   min-width: 700px;
 }
-#web_conference_title, #web_conference_description { min-width: 500px; }
+
+#web_conference_title, #web_conference_description {
+  min-width: 500px;
+}
+
 #web_conference_duration {
   width: 25px;
 }
